--- a/.bazelrc
+++ b/.bazelrc
@@ -1,2 +1,3 @@
-build --cxxopt=-std=c++17
-build --host_cxxopt=-std=c++17
+common --enable_bzlmod
+
+build --cxxopt=-std=c++17 --host_cxxopt=-std=c++17
