--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,6 +1,10 @@
-###############################################################################
-# Bazel now uses Bzlmod by default to manage external dependencies.
-# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
-#
-# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
-###############################################################################
+"""
+MODULE.bazel
+"""
+
+module(
+    name = "openai-server-proto",
+)
+
+# --registry=https://bcr.bazel.build
+bazel_dep(name = "grpc", version = "1.62.1", repo_name = "com_github_grpc_grpc")
